--- a/GoStack-desafio-reactjs/src/styles.css
+++ b/GoStack-desafio-reactjs/src/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -7,13 +9,25 @@
 body {
   font-size: 14px;
 }
+input, button{
+  font: Roboto, sans-serif;
+}
+
+input{
+  width: 100%;
+  height: 60px;
+  color: #333;
+  border: 1px solid #dcdce6;
+  border-radius: 8px;
+  padding: 0 24px;
+}
 
 div {
   width: 100%;
   margin: 20px;
 }
 
-div li {
+li {
   display: flex;
   align-items: center;
 }
@@ -26,6 +40,7 @@ button {
   background: #7159c1;
   color: #fff;
   border: 0;
+  border-radius: 4px;
   padding: 10px 15px;
   cursor: pointer;
   margin-top: 15px;
@@ -38,6 +53,68 @@ div li button {
   background: #ca4949;
 }
 
-form {
+input {
+  height: 28px;
+}
+
+.form-container{
+
+  background-color: lavender;
   display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
+  border-radius: 8px;
+
+  width: 450px;
+
+}
+
+.input-container{
+  
+  display: flex;
+  justify-content:space-between;
+  width: 400px;
+}
+
+.input-button{
+  margin-bottom: 20px;
+  transition: opacity 0.2s;
+}
+
+.input-button{
+  margin-top: -8px;;
+}
+
+button:hover{
+  opacity: 0.8;
+}
+
+.repo-container{
+  background-color: lightblue;
+  display: flex;
+  width: 450px;
+  height: 76px;
+  padding: 10px;
+  border-radius: 8px;
+  border:steelblue;
+  transition: border-style 0.2s;
+}
+
+.repo-container:hover{
+  border-style: solid;
+}
+
+.repo-container li{
+  width: 100%;
+}
+
+.repo-container li p {
+  font: Roboto, sans-serif;
+  font-size: 24px;
+}
+
+.repo-container button{
+  margin-left: auto;  
 }
